# VDM-ImGui-

./: CMakeLists.txt  README.md  VDM - ImGui edition.vcxproj  VDM - ImGui edition.vcxproj.filters  VDM ImGui.sln  imgui.ini
Saves/: download_history.json
src/: DownloadItemFactory.cpp  DownloadManager.cpp  Theme.cpp  main.cpp
src/headers/: DownloadHistory.h  DownloadItem.h  DownloadItemFactory.h  DownloadManager.h  Theme.h  paths.h
